# QR-Base-Wallet

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
components/aes/: CMakeLists.txt  aes.c  aes.h
components/aes_str/: CMakeLists.txt  aes_str.c  aes_str.h
components/base64url/: CMakeLists.txt  base64url.cpp  base64url.h  base64url.hpp
components/bc-ur/: CMakeLists.txt  bc-ur.cpp  bc-ur.hpp
components/cJSON/: CMakeLists copy.txt  CMakeLists.txt
components/cbor/: CMakeLists.txt
components/crc32/: CMakeLists.txt  crc32.c  crc32.h
components/qrcode_protocol/: CMakeLists.txt  qrcode_protocol.cpp  qrcode_protocol.h  qrcode_protocol.hpp
components/qrcodegen/: CMakeLists.txt  README.md  qrcodegen.c
components/rlp/: CMakeLists.txt  rlp.c  rlp.cpp  rlp.h  rlp.hpp
include/: wallet.h
lib/aes/: aes.cpp
main/: CMakeLists.txt  app.c  app.cpp  app_peripherals.c  idf_component.yml  kv_fs.c  lv_conf.h  peripherals.h
main/controller/: ctrl_home.c  ctrl_init.c  ctrl_onboard.c  ctrl_sign.c
main/include/: alloc_utils.h  app.h  app.hpp  app_peripherals.h  kv_fs.h
main/include/controller/: ctrl_home.h  ctrl_init.h  ctrl_onboard.h  ctrl_sign.h
main/include/ui/: ui_events.h  ui_home.h  ui_loading.h  ui_phrase_input_page.h  ui_pin_input_page.h  ui_qr_code.h  ui_sign.h  ui_toast.h
main/ui/: ui_events.c  ui_home.c  ui_loading.c  ui_phrase_input_page.c  ui_pin_input_page.c  ui_qr_code.c  ui_sign.c  ui_toast.c
src/: main.cpp  wallet.cpp
(+42 files in other folders)
